[package]
name = "sentinelnet"
version = "0.1.0"
edition = "2021"
authors = ["Silex / Silexperience"]
description = "Incentivized decentralized watchtower protocol for Lightning Network"
license = "MIT"

[[bin]]
name = "sentinel"
path = "src/main.rs"


[[bin]]
name = "sentinel-client"
path = "src/client/main.rs"
[dependencies]
shellexpand = "3"
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Bitcoin
bitcoin = { version = "0.31", features = ["serde"] }
bitcoincore-rpc = "0.18"

# HTTP (LND REST API)
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Storage
sled = "0.34"

# Crypto
sha2 = "0.10"
hmac = { version = "0.12", features = ["std"] }
hex = "0.4"
rand = "0.8"
base64 = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive"] }
